fix: mobile design of navbar (buttons too close to logo) and schedule timezone info (too close to header on some viewports)

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -126,3 +126,8 @@
     width: 5rem;
   }
 }
+@media (max-width: 399.98px) {
+  .nav_link_cta {
+    padding: .75rem 1rem;
+  }
+}
