--- a/styles/Schedule.module.css
+++ b/styles/Schedule.module.css
@@ -16,6 +16,7 @@
   font-weight: 900;
   font-size: 3rem;
   margin: 0;
+  margin-right: 1rem;
 }
 .schedule_header p {
   margin: 0;
